[gd_scene load_steps=11 format=3 uid="uid://eyoa1t2qca5b"]

[ext_resource type="Script" path="res://scripts/battle/battle_ui.gd" id="1_uygh1"]
[ext_resource type="FontFile" uid="uid://dmoxy353pwdyn" path="res://font/Starborn.ttf" id="2_i0lsr"]
[ext_resource type="Theme" uid="uid://qcybari1xd00" path="res://data/theme/battle_ui_theme.tres" id="2_jp73e"]
[ext_resource type="FontFile" uid="uid://lc42ow22fhp3" path="res://font/rainyhearts.ttf" id="4_8s763"]

[sub_resource type="LabelSettings" id="LabelSettings_glw2y"]
font = ExtResource("2_i0lsr")
font_size = 25
shadow_size = 7
shadow_color = Color(0.152941, 0.152941, 0.152941, 0.65098)
shadow_offset = Vector2(1, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nkgfh"]

[sub_resource type="Theme" id="Theme_avek1"]

[sub_resource type="LabelSettings" id="LabelSettings_suf3p"]
font = ExtResource("4_8s763")
font_size = 26

[sub_resource type="Animation" id="Animation_mrkaa"]
resource_name = "hit_effect"
length = 0.4

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8x8fj"]
_data = {
"hit_effect": SubResource("Animation_mrkaa")
}

[node name="BattleUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uygh1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.305882)

[node name="TurnIndicator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_top = 40.0
offset_right = 87.5
offset_bottom = 79.0
grow_horizontal = 2
text = "Your Turn"
label_settings = SubResource("LabelSettings_glw2y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -158.0
offset_right = 208.0
offset_bottom = -8.0
grow_vertical = 0
theme = ExtResource("2_jp73e")

[node name="PlayerName" type="Label" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_right = 52.0
offset_bottom = 39.0
grow_horizontal = 2
text = "Player"
horizontal_alignment = 1

[node name="PlayerHealthBar" type="ProgressBar" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -10.0
offset_right = 75.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="PlayerHealthLabel" type="Label" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -19.5
offset_right = 62.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
horizontal_alignment = 1

[node name="EnemyPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -208.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 158.0
grow_horizontal = 0
theme = ExtResource("2_jp73e")

[node name="EnemyName" type="Label" parent="EnemyPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_right = 52.0
offset_bottom = 39.0
grow_horizontal = 2
text = "Slime"
horizontal_alignment = 1

[node name="EnemyHealthBar" type="ProgressBar" parent="EnemyPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -10.0
offset_right = 75.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
max_value = 50.0
value = 50.0
show_percentage = false

[node name="EnemyHealthLabel" type="Label" parent="EnemyPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -19.5
offset_right = 62.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "50/50"
horizontal_alignment = 1

[node name="MovesPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -308.0
offset_top = -52.0
offset_right = 309.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_jp73e")
theme_override_styles/panel = SubResource("StyleBoxEmpty_nkgfh")

[node name="MovesContainer" type="HBoxContainer" parent="MovesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jp73e")
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MessagePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.5
offset_top = 100.0
offset_right = 203.5
offset_bottom = 162.0
grow_horizontal = 2
theme = ExtResource("2_jp73e")

[node name="MessageLabel" type="Label" parent="MessagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_avek1")
text = "Battle Message goes here"
label_settings = SubResource("LabelSettings_suf3p")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../EnemyPanel")
libraries = {
"": SubResource("AnimationLibrary_8x8fj")
}
